--- a/index.html
+++ b/index.html
@@ -1,39 +1,33 @@
-<!DOCTYPE >
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="mizu.its.moe | mizu.is-a.dev" />
-		<meta property="og:description" content="mizu.its.moe | mizu.is-a.dev" />
-		<meta property="og:title" content="Mizu" />
-		<meta property="og:image" content="" />
-		<meta property="og:type" content="website" />
-		<link rel="canonical" href="https://miyagawamizu.github.io/" />
-		<meta property="og:site_name" content="@MiyagawaMizu" />
-		<meta
-			name="keywords"
-			content="miyagawamizu,mizu, mizumiyagawa, miyagawa, miyagawa mizu" />
+		<meta name="description" content="AKx5 | Discord / Telegram Bot Developer" />
+		<meta property="og:description" content="AKx5 | Discord / Telegram Bot Developer" />
+		<meta property="og:title" content="AKx5" />
 		<meta
 			property="og:image"
 			content="https://cdn.discordapp.com/attachments/953841823338618900/1193970050365919292/tumblr_5d43d3aee5d6a0f535c75ebd4654a423_0a23ad45_1280.gif" />
+		<meta property="og:type" content="website" />
+		<link rel="canonical" href="https://akx5.dev/" />
+		<meta property="og:site_name" content="AKx5" />
+		<meta
+			name="keywords"
+			content="AKx5, Discord Bot Developer, Telegram Bot Developer, Web Developer" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="language" content="English" />
-		<meta name="author" content="MiyagawaMizu" />
-		<meta name="view-transition" content="same-origin" />
+		<meta name="author" content="AKx5" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Playpen+Sans&display=swap"
 			rel="stylesheet" />
-		<link rel="icon" href="./public/mahiro_flex.ico" />
+		<link rel="icon" href="./public/akx5_icon.ico" />
 		<link rel="stylesheet" href="./styles/style.css" />
-		<link
-			href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
-			rel="stylesheet"
-			crossorigin />
-		<title>MiyagawaMizu</title>
+		<title>AKx5</title>
 	</head>
-	<body oncontextmenu="return true;">
+	<body>
 		<div class="container">
 			<div class="profile-border box-color">
 				<div class="profile box-color">
@@ -41,8 +35,8 @@
 						<img
 							loading="lazy"
 							id="banner-image"
-							src="./public/banner.webp"
-							alt="" />
+							src="./public/banner.gif"
+							alt="AKx5 Banner" />
 					</div>
 					<div class="main-header">
 						<div class="image">
@@ -51,185 +45,85 @@
 									loading="lazy"
 									class="box-color"
 									id="avatar-image"
-									alt=""
-									aria-hidden="true"
-									src="./public/av.webp" />
+									alt="AKx5 Avatar"
+									src="./public/akx5_avatar.png" />
 								<img
 									loading="lazy"
 									class="avatar-decoration"
-									src="./public/lumine_avatar_frame.webp"
+									src="./public/avatar_frame.webp"
 									alt="" />
 								<div class="status box-color tooltip">
 									<img
 										id="status-image"
-										src="./public/status/offline.svg"
-										alt="" />
+										src="./public/status/online.svg"
+										alt="Online" />
 								</div>
 							</div>
-							<!-- </button> -->
 						</div>
 						<div class="badges box-color" id="badges">
 							<div class="badges-right">
-								<a class="tooltip" aria-label="HypeSquad Brilliance">
-									<img alt=" " src="./public/badges/hypesquad-brilliance.svg"
+								<a class="tooltip" aria-label="Discord Bot Developer">
+									<img alt=" " src="./public/badges/discord-bot-developer.svg"
 								/></a>
-								<a class="tooltip" aria-label="Active Developer">
-									<img alt=" " src="./public/badges/active-developer.svg"
+								<a class="tooltip" aria-label="Telegram Bot Developer">
+									<img alt=" " src="./public/badges/telegram-bot-developer.svg"
 								/></a>
-								<a class="tooltip" aria-label="Subscriber since Jan 26, 2023">
-									<img alt=" " src="./public/badges/nitro.svg"
-								/></a>
-								<a
-									class="tooltip"
-									aria-label="Originally known as MiyagawaMizu#0001">
-									<img alt=" " src="./public/badges/legacy-username.svg"
+								<a class="tooltip" aria-label="Web Developer">
+									<img alt=" " src="./public/badges/web-developer.svg"
 								/></a>
 							</div>
 							<div class="badges-left"></div>
-							<!-- badges list-->
-							<!-- -->
 						</div>
 					</div>
 					<div class="card box-color">
 						<div class="name-box">
-							<span class="display-name">Mizu</span>
-							<button
-								class="id username"
-								id="textToCopy"
-								aria-label="Click to copy!"
-								onclick="copyToClipboard()"></button>
-							<span class="pronouns">Hà Thủy</span>
+							<span class="display-name">AKx5</span>
+							<span class="pronouns">Discord / Telegram Bot Developer</span>
 							<div class="custom-status">
-								<img id="custom-status-emoji" />
-								<p class="custom-status-text"></p>
+								<img id="custom-status-emoji" src="./public/emojis/computer.png" />
+								<p class="custom-status-text">Coding away on projects!</p>
 							</div>
 						</div>
 						<div class="body">
 							<div class="content">
 								<div class="about-section">
 									<div class="title-body">ABOUT ME</div>
-									<!-- text -->
 									<span class="about-me"
-										>I'm Mizu🌸 from
-										<div class="flag">
-											<img
-												src="./public/icons/flag-for-flag-vietnam-svgrepo-com.svg" />
-										</div>
-										a Hikikomori plus NEET, and I enjoy playing video games 🎮,
-										watching anime, reading manga 🗾, and occasionally tinkering
-										with with random stuff 💻. I'm quite shy 👉👈, so it would
-										be really nice if you're the one who takes the initiative to
-										be friends with me (≩ᴗ≨).<br /><br />I'm currently the owner
-										👑 of a small
-										<a href="https://discord.com/" target="_blank"> Discord</a>
-										server called
-										<a href="https://discord.gg/FpWq76bMGA" target="_blank"
-											>N.E.E.T</a
-										>
-										and I hope you'll join and play some games with me on
-										<a
-											href="https://steamcommunity.com/id/MiyagawaMizu/"
-											target="_blank"
-											>Steam</a
-										>.</span
+										>Hi! I'm AKx5 🧑‍💻. I'm passionate about creating innovative
+										Discord and Telegram bots. I also enjoy working on web
+										development projects. Feel free to connect with me on
+										<a href="https://discord.com/users/795555714797273098" target="_blank">Discord</a>!</span
 									>
-									<!-- -->
 								</div>
 								<div class="title-body">ROLES</div>
 								<div class="roles-body">
-									<!-- roles list -->
-									<div class="rol rosepink">
+									<div class="rol red">
 										<i class="fas fa-circle"></i>
-										<span>ニート</span>
-									</div>
-									<div class="rol softpink">
-										<i class="fas fa-circle"></i>
-										<span>Weeb Developer</span>
-									</div>
-									<div class="rol green">
-										<i class="fas fa-circle"></i>
-										<span>Gamer</span>
+										<span>Discord Bot Developer</span>
 									</div>
 									<div class="rol blue">
 										<i class="fas fa-circle"></i>
-										<span>ICTU Student</span>
+										<span>Telegram Bot Developer</span>
 									</div>
-									<!-- -->
+									<div class="rol green">
+										<i class="fas fa-circle"></i>
+										<span>Web Developer</span>
+									</div>
 								</div>
 								<div class="divider social-divider"></div>
 								<div class="title-body">CONNECTIONS</div>
-
 								<div class="socials">
-									<!-- social list -->
 									<div class="column">
 										<a
 											class="platform"
-											href="http://steamcommunity.com/id/MiyagawaMizu/"
+											href="https://github.com/AKx5"
 											rel="noreferrer noopener"
 											target="_blank">
 											<img
 												class="platform-icon"
-												alt=" "
-												aria-hidden="true"
-												src="./public/platforms/steam.svg" />
-											<div class="text-base platform-username">
-												MiyagawaMizu
-											</div>
-											<div>
-												<img
-													alt=" "
-													id="link"
-													aria-hidden="true"
-													src="./public/icons/link.svg"
-													class="connect" />
-											</div>
-										</a>
-										<a
-											class="platform"
-											href="http://"
-											rel="noreferrer noopener"
-											target="_blank">
-											<img
-												class="platform-icon"
-												alt=" "
-												aria-hidden="true"
-												src="./public/platforms/tiktok.svg" />
-											<div class="text-base platform-username">Mízù</div>
-											<div
-												href="http://fb.com/MiyagawaMizu/"
-												rel="noreferrer noopener"
-												target="_blank">
-												<img
-													alt=" "
-													id="link"
-													aria-hidden="true"
-													src="./public/icons/link.svg"
-													class="connect" />
-											</div>
-										</a>
-									</div>
-									<div class="column">
-										<a
-											class="platform"
-											href="https://github.com/MiyagawaMizu"
-											rel="noreferrer noopener"
-											target="_blank">
-											<img
-												class="platform-icon"
-												alt=" "
-												aria-hidden="true"
+												alt="GitHub"
 												src="./public/platforms/github.svg" />
-											<div class="text-base platform-username">
-												MiyagawaMizu
-											</div>
-											<div>
-												<img
-													alt=" "
-													id="link"
-													aria-hidden="true"
-													src="./public/icons/link.svg"
-													class="connect" />
-											</div>
+											<div class="text-base platform-username">AKx5</div>
 										</a>
 										<a
 											class="platform"
@@ -238,29 +132,17 @@
 											target="_blank">
 											<img
 												class="platform-icon"
-												alt=" "
-												aria-hidden="true"
+												alt="Discord"
 												src="./public/platforms/discord.svg" />
-											<div class="text-base platform-username">
-												Discord Server
-											</div>
-											<div class="">
-												<img
-													alt=" "
-													id="link"
-													aria-hidden="true"
-													src="./public/icons/link.svg"
-													class="connect" />
-											</div>
+											<div class="text-base platform-username">Discord Server</div>
 										</a>
 									</div>
-									<!-- -->
 								</div>
 								<div class="chat-container">
 									<input
 										type="text"
 										id="message-input"
-										placeholder="Message @Mizu" />
+										placeholder="Message @AKx5" />
 								</div>
 							</div>
 						</div>
